Object Creation Functions, Inheritance, Properties, Methods, Instantiation

--- a/Objects.html
+++ b/Objects.html
@@ -27,9 +27,9 @@ and open the template in the editor.
                 <p>Insert a Phone : </p><input name="insertphone" type="text" id="phone" >
                 <p>Insert an Email : </p><input name="insertemail" type="email" id="email">
                 <input type="button" onclick="createObject()" value="Click for Result" >
-                <p class="abt slideanim text-justify" id="result1"></p>
-                <p class="abt slideanim text-justify" id="result"></p>
-                <p class="abt slideanim text-justify" id="result2"></p>
+                <p id="result1"></p>
+                <p id="result"></p>
+                <p id="result2"></p>
 
             </div>
         <!-- /Sandbox Section -->
