--- a/Json.html
+++ b/Json.html
@@ -64,7 +64,7 @@ and open the template in the editor.
                     for(j=0;j < objetos.Persons.length ; j++){
                         if(j == select){
                             document.getElementById('content').innerHTML = "I'm " + objetos.Persons[j].name + " " + objetos.Persons[j].lastname + "." 
-                            + " I have a " + objetos.Persons[j].age + " years old and my occupation is " + objetos.Persons[j].occupation;
+                            + " I'm " + objetos.Persons[j].age + " years old and my occupation is " + objetos.Persons[j].occupation;
                             /*Declarar un objeto JSON con una funcion en un atributo
                              notese el uso de "this" que hace referencia a el objeto en sí, es decir a persona*/
                             ;
