--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@ and open the template in the editor.
                 <li>2. <a href="Objects.html">Object Creation Functions, Inheritance, Properties, Methods, Instantiation</a></li>
                 <li>3. <a href="Json.html">JSON Parse, Stringify</a></li>
                 <li>4. <a href="JsonXMLHTTP.html">Using XMLHTTPRequest to Consume a JSON Web Service</a></li>
-                <li>5. <a href="#">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></li>
-                <li>6. <a href="#">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></li>
-                <li>7. <a href="#">Manipulating CSS Class Properties Using JavaScript</a></li>
-                <li>8. <a href="#">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</a></li>
-                <li>9. <a href="#">Standard JavaScript Events Including those for Mobile Devices </a></li>
-                <li>10. <a href="#">TML5 Tags - Video, Audio, and Canvas</a></li>
-                <li>11. <a href="#">CSS3 Transitions </a></li>
+                <li>5. <a href="Storage.html">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></li>
+                <li>6. <a href="Manipulations.html">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></li>
+                <li>7. <a href="ManipulationCSS.html">Manipulating CSS Class Properties Using JavaScript</a></li>
+                <li>8. <a href="Transitions.html">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</a></li>
+                <li>9. <a href="StandardEvents.html">Standard JavaScript Events Including those for Mobile Devices </a></li>
+                <li>10. <a href="Tags.html">TML5 Tags - Video, Audio, and Canvas</a></li>
+                <li>11. <a href="Css3Transitions.html">CSS3 Transitions </a></li>
             </ul>  
             <!-- Footer Section -->
         <section class="footer">
