--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ and open the template in the editor.
                 <li>3. <a href="Json.html">JSON Parse, Stringify</a></li>
                 <li>4. <a href="JsonXMLHTTP.html">Using XMLHTTPRequest to Consume a JSON Web Service</a></li>
                 <li>5. <a href="Storage.html">Local Storage API, Storing and Retrieving Simple Data, Arrays, Associative Arrays, and Objects</a></li>
-                <li>6. <a href="Manipulations.html">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></li>
+                <li>6. <a href="Manipulation.html">DOM Manipulation Using createElement, appendChild, insertBefore, removeChild, etc.</a></li>
                 <li>7. <a href="ManipulationCSS.html">Manipulating CSS Class Properties Using JavaScript</a></li>
                 <li>8. <a href="Transitions.html">Creating CSS3 Transitions and Animations in CSS and triggering them with JavaScript</a></li>
                 <li>9. <a href="StandardEvents.html">Standard JavaScript Events Including those for Mobile Devices </a></li>
